# Projeto-BigData-Campanha-de-Vacina

./: .gitignore  AGENTS.md  README.md  benchmark_todos.py  pyproject.toml  resultado_cruzamento_2025.csv  resultado_cruzamento_2026.csv  scratch_benchmark.py
notebooks/: 01_ingest_explore.ipynb  02_transform.ipynb  03_analysis.ipynb  04_dashboard_proto.ipynb
scratch/: fix_dashboard.py  rewrite_dashboard_part1.py
src/: analise_2025.py  analise_2026.py  analysis.py  config.py  dashboard.py  ingest.py  pipeline_paralelo.py  transform.py  viz.py
src/vacinação/: analise_2025.py  vacinacao_fev_2026_filtrado.csv  vacinacao_jan_2026_filtrado.csv  visualizacao_2026.py
tests/: test_ingest.py  test_transform.py
